protocolmodel/mcrl2/testing/errors/error_4001.mcf
% E4001 - MAC verification failure
[true* . LOG_ERROR(E4001)] false